solved a problem with menu display on ios, also solved a problem with profile on mobile version, fixed a few bugs

--- a/src/main/resources/static/CSS/header.css
+++ b/src/main/resources/static/CSS/header.css
@@ -106,6 +106,16 @@
 		margin-top: 20px;
 	}
 
+	.button-menu-header a {
+		text-decoration: none;
+		color: var(--white-color);
+	}
+
+	.button-menu-header-sign a {
+		text-decoration: none;
+		color: var(--white-color);
+	}
+
 	.button-menu-header .icon-button-menu {
 		background: var(--light-brand-color);
 		margin-left: 1em;
@@ -593,6 +603,16 @@
 		padding-right: 3.3em;
 		cursor: pointer;
 		margin-top: 20px;
+	}
+
+	.button-menu-header a {
+		text-decoration: none;
+		color: var(--white-color);
+	}
+
+	.button-menu-header-sign a {
+		text-decoration: none;
+		color: var(--white-color);
 	}
 
 	.button-menu-header .icon-button-menu {
@@ -1105,6 +1125,16 @@
 		margin-top: 20px;
 	}
 
+	.button-menu-header a {
+		text-decoration: none;
+		color: var(--white-color);
+	}
+
+	.button-menu-header-sign a {
+		text-decoration: none;
+		color: var(--white-color);
+	}
+
 	.button-menu-header .icon-button-menu {
 		background: var(--light-brand-color);
 		margin-left: 1em;
@@ -1576,6 +1606,16 @@
 		margin-top: 20px;
 	}
 
+	.button-menu-header a {
+		text-decoration: none;
+		color: var(--white-color);
+	}
+
+	.button-menu-header-sign a {
+		text-decoration: none;
+		color: var(--white-color);
+	}
+
 	.button-menu-header .icon-button-menu {
 		background: var(--light-brand-color);
 		margin-left: 1em;
@@ -1841,14 +1881,14 @@
 	}
 
 	.nav-buttons-container-desktop {
-		display: none;
+		display: flex;
 		gap: 30px;
 		margin-top: 5px;
 	}
 }
 
 .profile {
-	display: block;
+	display: none;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -1856,7 +1896,7 @@
 }
 
 .nav-buttons-container-mobile {
-	display: none;
+	display: block;
 }
 
 .nav-link-hold {
